# fty-protoc

./: CMakeLists.txt  Jenkinsfile  README.md  fty-protoc-config.cmake.in
cmake/: protogen.cmake
packaging/debian/: changelog  control
src/: classgenerator.cpp  classgenerator.h  filegenerator.cpp  filegenerator.h  formatter.h  generator.cpp  generator.h  main.cpp  utils.h
